css/style.css
/* 
GENERAL
*/

*{
  margin: 0;
  padding:0;  
  box-sizing: border-box;
  }

body {
  background-color: #f6f8f9;
  font-family: Arial, Helvetica, sans-serif;
}

header{
  background-color: white;
  height: 80px;
}

.container{
  width: 70%;
  margin: 50px auto;
  background-color: white;
}

h1{
  font-size: 40px;
  display: inline-block;
}

button{
  background-color: white;
  color: grey;
  border: 1px solid grey;
  border-radius: 5px;
  padding: 5px;
}

.primary-button {
  background-color: #46adf1;
  color: white;
  border: 1px solid #46adf1;

}

/* 
HEADER
*/

.logo-box{
  line-height: 80px;
}

.logo-box img{
  padding: 10px 5px 10px 20px;
  vertical-align: baseline;
}

/* 
/HEADER
*/

/* 
MAIN
*/

.button-box{
  /* Adds the rounded border at the top of the box */
  border-radius: 3px 3px 0 0;
  padding: 15px 15px 15px 50px;
}

.to-do-box{
  /* Adds the rounded border at the bottom of the box */
  border-radius: 0 0 3px 3px;
  padding: 40px 15px 40px 50px;
}

.to-do-box, .button-box{
  /* Adds the border to the top and bottom of the box */
  border: 1px solid #f6f8f9;
}

.to-do-section{
  margin-bottom: 20px;
}

.to-do-box-title{
  font-size: 20px;
  padding-bottom: 10px;
}

.to-do-box-title::before{
  /* Add Down Arrow before text */
  content: '\25BC' ;
}


.to-do-element::before{
  /* Add Circle element before text */
  display: inline-block;
  width: 15px;
  height: 15px;
  border-radius: 50%;
  margin-right: 5px;
  text-align: center;
  line-height: 15px;
  padding: 2px;
}

.to-do-element-checked::before{
  /* Add Check element inside circle and change color in green */
  content: '\02713';
  border: 1px solid green;
  color: green;
}

.to-do-element-crossed::before{
  /* Add Cross element inside circle and change color in red */
  content: '\0078';
  border: 1px solid red;
  color: red;
}

.to-do-element-tag{
  /* Element Tag Style */
  display: inline-block;
  width: 80px;
  height: 20px;
  border-radius: 8px;
  margin-right: 5px;
  text-align: center;
  line-height: 20px;
  font-size: 12px;
  color: white;
}

.to-do-element-tag-editorial{
  /* Element Editorial Tag Style */
  background-color: #45abe9;
}

.to-do-element-tag-recruiting{
  /* Element Recruiting Tag Style */
  background-color: #64c0a9;
}

.to-do-element-tag-mobile{
  /* Element Mobile Tag Style */
  background-color: #f29e33;
}

.to-do-element-tag-website{
  /* Element Website Tag Style */
  background-color: #d763a1;
}

.to-do-element-tag-sales{
  /* Element Sales Tag Style */
  background-color: #b0c925;
}

.to-do-element-tag-goals{
  /* Element Goals Tag Style */
  background-color: #9c72e4;
}

/* 
/MAIN
*/

